# kids-story-generator

./: .gitignore  README.md  main.py  pyproject.toml
config/: database.py
src/agents/: editor.py  illustrator.py  narrator.py  orchestrator.py  writer.py
src/models/: database.py  story.py
src/repositories/: story_repository.py
src/utils/: file_io.py
src/workflows/: story_flow.py
